tests/fixtures/rules/require-dot-notation/good/dot-notation.js
let a = b[c];
let a = b.c;
let a = b[c.d];
let a = b[1];
let a = b.while;
