tests/fixtures/rules/require-dot-notation/bad/leading-underscore.js
let a = b['_camelCased'];
